# r2r-offer-utils

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
r2r_offer_utils/: __init__.py  advanced_logger.py  cache_operations.py  cli_utils.py  logging.py  normalization.py
r2r_omr_utils/: advanced_logger.py
