[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "r2r_offer_utils"
author = "Ride2Rail Project"
author-email = "cristian.consonni@eurecat.org"
home-page = "https://github.com/Ride2Rail/r2r-offer-utils/"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"

